--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,31 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-xs-12">
             <h3>I am in the AppComponent </h3>
             <hr>
             <app-servers></app-servers>
-            <!-- <div app-servers></div> -->
-            <!-- <div class="app-servers"></div> -->
+            <div app-servers></div> 
+             <div class="app-servers"></div> 
+        </div>
+    </div>
+</div> -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <ol>
+                <li>Create two new commponents</li>
+                <li>output them beneath each other in AppComponent</li>
+                <li>output a warning or success message in the components</li>
+                <li>Style the components apporpriately and styles!</li>
+            </ol>
+            <p>Use external or internal tamples and styles!</p>
+            <p>Feel free to create more components, nest them into each other or play around with
+                different types of selectors
+            </p>
+            <hr>
+            <app-warning-alert></app-warning-alert>
+            <app-success-alert></app-success-alert>
         </div>
     </div>
 </div>
