--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,5 +2,7 @@
  class="btn btn-primary"
  [disabled]="!allowNewServer"
  > Add Server</button>
+<p>{{allowNewServer}}</p>
+<p [innerText]="allowNewServer"></p>
 <app-server></app-server>
 <app-server></app-server>
