--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,7 +1,8 @@
 <label>Server Name</label>
 <input type="text" class="form-control" (input)="onUpdateServerName($event)" >
+<input type="text" class="form-control" [(ngModel)]="serverName" >
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()"> Add Server</button>
-<p>{{serverName}}</p>
+<!-- <p>{{serverName}}</p> -->
 <!-- <p>{{allowNewServer}}</p> -->
 <!-- <p [innerText]="allowNewServer"></p> -->
 <p>{{serverCreationStatus}}</p>
