--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -6,6 +6,9 @@
 <!-- <p>{{allowNewServer}}</p> -->
 <!-- <p [innerText]="allowNewServer"></p> -->
 <!-- <p>{{serverCreationStatus}}</p> -->
-<p *ngIf="serverCreated">Server was created, server name is {{serverCreationStatus}}</p>
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{serverCreationStatus}}</p>
+<ng-template #noServer>
+    <p>No server was created!</p>
+</ng-template>
 <app-server></app-server>
 <app-server></app-server>
