--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -10,5 +10,5 @@
 <ng-template #noServer>
     <p>No server was created!</p>
 </ng-template>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let item of servers"></app-server>
+<!-- <app-server></app-server> -->
