Getting the Index when using ngFor - 046 exercise

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -10,5 +10,8 @@
 <ng-template #noServer>
     <p>No server was created!</p>
 </ng-template>
-<app-server *ngFor="let item of servers"></app-server>
+<div *ngFor="let item of servers; let i=index">
+{{i}}
+    <app-server ></app-server>
+</div>
 <!-- <app-server></app-server> -->
